--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "badsv"
 version = "0.1.0"
-authors = ["RocketRace <neverquitben@gmail.com>"]
+authors = ["Olivia Palmu <oliviaspalmu@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
